--- a/styles/stressed.css
+++ b/styles/stressed.css
@@ -15,7 +15,7 @@ p {
     font-size: 1.6rem;
     width: 600px;
     font-family: 'Montserrat', sans-serif;
-    color: white;
+    color: black;
 }
 
 #circle {
@@ -26,7 +26,7 @@ p {
  height: 40rem;
  width: 80rem;
  border-radius: 0 0 40rem 40rem;
- background-color: #087e8b;
+ background-color: #dffcff;
 }
 
 #arrow {
@@ -49,7 +49,7 @@ span{
 h1{
     position: absolute;
     font-size: 7rem;
-    color: white;
+    color: black;
     left: 50%;
     bottom: 60%;
     font-family: 'Open Sans', sans-serif;
