--- a/styles/anxious.css
+++ b/styles/anxious.css
@@ -9,14 +9,14 @@ html {
    }
 
 
-p {
- position: absolute;
-    left:10%;
-    padding: 0 100px 0px 0px;
-    font-size: 1.5rem;
-    width: 630px;
-    font-family: 'Montserrat', sans-serif;
-}
+   p {
+    position: absolute;
+       left:10%;
+       padding: 0 100px 0px 0px;
+       font-size: 2.5vw;
+       width: 45vw;
+       font-family: 'Montserrat', sans-serif;
+   }
 
 #circle {
  position: absolute;
@@ -31,33 +31,87 @@ p {
 }
 
 #arrow {
- width: 0;
- height: 0;
- border-left: 20px solid transparent;
- border-right: 20px solid transparent;
- border-top: 40px solid darkgray;
- position: fixed;
- left: 50%;
- top: 93%;
-}
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-top: 40px solid darkgray;
+    position: fixed;
+    left: 50%;
+    bottom: 0px;
+   }
 
-span{
-    position: absolute;
-    top: 40%;
-    left: 52%;
-}
 
-h1{
+.video{
     position: absolute;
-    font-size: 11.5rem;
+    top: 35%;
+    left: 53%;
+    width: 100%;
+    padding-bottom: 56.25%; 
+    height: 0;
+  }
+  .video iframe{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 40%;
+    height: 40%;
+  }
+
+  h1{
+    position: absolute;
+    font-size: 15vw;
     color: white;
-    left: 52%;
-    top: -10%;
+    left: 50%;
+    bottom: 50%;
     font-family: 'Open Sans', sans-serif;
-    
 }
-figure{
+
+
+
+.img{
     position: absolute;
     left: 10%;
+    top: 70%;
+    width: 20%;
+    height: auto;
+}
+
+@media screen and (max-width: 500px) {
+	#circle {
+    position: absolute;
+    top: 70%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+    height: 150vh;
+    width: 100vw;
+    border-radius: 0 100vw 100vw  0;
+    background-color: darkgray;
+	}
+   h1{
+     display:none;
+   }
+   p{
+    font-size: 4vmin;
+    width: 100vw;
+  }
+  
+  .video {
+    position: absolute;
     top: 45%;
+    left: 10%;
+    width: 100%;
+    padding-bottom: 56.25%; 
+    height: 0;
+  }
+  .video iframe{
+      width: 80%;
+      height: 80%;
+  }
+  
+  .img{
+    position: absolute;
+    width: 35%;
+    top: 80%;
+  }
 }
