--- a/styles/bored.css
+++ b/styles/bored.css
@@ -10,61 +10,100 @@ html {
 
 
 p {
- position: absolute;
-    left:15%;
+    position: absolute;
+    left:10%;
     padding: 0 100px 0px 0px;
-    font-size: 1.6rem;
-    width: 600px;
+    font-size: 2.5vw;
+    width: 45vw;
     font-family: 'Montserrat', sans-serif;
     color: rgb(255, 229, 180);
-    top: 5%;
 }
 
 #circle {
- position: absolute;
- top: 30%;
- left: 50%;
- transform: translate(-50%, -50%);
- height: 40rem;
- width: 80rem;
- border-radius: 0 0 40rem 40rem;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 90vh;
+    width: 100vw;
+    border-radius: 0 0 90vh 90vh;
  background-color: #22223b;
 }
 
 #arrow {
- width: 0;
- height: 0;
- border-left: 20px solid transparent;
- border-right: 20px solid transparent;
- border-top: 40px solid darkgray;
- position: fixed;
- left: 50%;
- top: 93%;
-}
-
-span{
-    position: absolute;
-    top: 35%;
-    left: 55%;
-}
-
-h1{
-    position: absolute;
-    font-size: 6.5rem;
-    color: rgb(255, 229, 180);
-    left: 55%;
-    bottom: 65%;
-    font-family: 'Open Sans', sans-serif;
-    
-}
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-top: 40px solid darkgray;
+    position: fixed;
+    left: 50%;
+    bottom: 0px;
+   }
 
 #paper{
     position: absolute;
     top: 45%;
     left: 55%;
+    width: 40%;
+    height: auto;
 }
-#decoration{
+
+
+
+h1{
     position: absolute;
+    font-size: 8vw;
+    color: rgb(255, 229, 180);
+    left: 55%;
+    bottom: 50%;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.img{
+    position: absolute;
+    left: 10%;
     top: 40%;
-    left: 15%;
+    width: 30%;
+    height: auto;
+}
+
+
+
+@media screen and (max-width: 500px) {
+	#circle {
+    position: absolute;
+    top: 70%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+    height: 150vh;
+    width: 100vw;
+    border-radius: 0 100vw 100vw  0;
+    background-color: #22223b;
+	}
+
+   h1{
+     display:none;
+   }
+
+  p{
+    font-size: 4vmin;
+    width: 100vw;
+  }
+  
+  #paper{
+    position:absolute;
+    left: 9%;
+    top: 30%;
+    height: 30%;
+    width: auto;
+}
+
+
+
+  .img{
+    position: absolute;
+    width: 35%;
+    top: 70%;
+  }
 }
