--- a/styles/cheerful.css
+++ b/styles/cheerful.css
@@ -9,54 +9,109 @@ html {
    }
 
 
-p {
- position: absolute;
-    left:10%;
-    padding: 0 100px 0px 0px;
-    font-size: 1.6rem;
-    width: 600px;
-    font-family: 'Montserrat', sans-serif;
-}
-
-#circle {
- position: absolute;
- top: 30%;
- left: 50%;
- transform: translate(-50%, -50%);
- height: 40rem;
- width: 80rem;
- border-radius: 0 0 40rem 40rem;
- background-color: #F7DB39;
-}
-
-#arrow {
- width: 0;
- height: 0;
- border-left: 20px solid transparent;
- border-right: 20px solid transparent;
- border-top: 40px solid darkgray;
- position: fixed;
- left: 50%;
- top: 93%;
-}
-
-span{
+   p {
     position: absolute;
-    top: 43%;
+       left:10%;
+       padding: 0 100px 0px 0px;
+       font-size: 2.5vw;
+       width: 45vw;
+       font-family: 'Montserrat', sans-serif;
+   }
+
+   #circle {
+    position: absolute;
+    top: 30%;
     left: 50%;
-}
+    transform: translate(-50%, -50%);
+    height: 90vh;
+    width: 100vw;
+    border-radius: 0 0 90vh 90vh;
+    background-color: #F7DB39;
+   }
 
-h1{
+
+   #arrow {
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-top: 40px solid darkgray;
+    position: fixed;
+    left: 50%;
+    bottom: 0px;
+   }
+
+   .video{
     position: absolute;
-    font-size: 6rem;
+    top: 35%;
+    left: 53%;
+    width: 100%;
+    padding-bottom: 56.25%; 
+    height: 0;
+  }
+  .video iframe{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 40%;
+    height: 40%;
+  }
+
+  h1{
+    position: absolute;
+    font-size: 8vw;
     color: white;
     left: 50%;
-    top: 5%;
-    font-family: 'Open Sans', sans-serif;   
+    bottom: 58%;
+    font-family: 'Open Sans', sans-serif;
 }
 
-figure{
+
+
+.img{
     position: absolute;
-    left: 5%;
-    top: 30%;
+    left: 10%;
+    top: 60%;
+    width: 20%;
+    height: auto;
+}
+
+
+@media screen and (max-width: 500px) {
+	#circle {
+    position: absolute;
+    top: 70%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+    height: 150vh;
+    width: 100vw;
+    border-radius: 0 100vw 100vw  0;
+    background-color: #F7DB39;
+	}
+   h1{
+     display:none;
+   }
+  p{
+    font-size: 4vmin;
+    width: 100vw;
+  }
+  
+  .video {
+    position: absolute;
+    top: 35%;
+    left: 10%;
+    width: 100%;
+    padding-bottom: 56.25%; 
+    height: 0;
+  }
+  .video iframe{
+      width: 80%;
+      height: 80%;
+  }
+  
+  .img{
+    position: absolute;
+    width: 35%;
+    top: 70%;
+  }
 }
