--- a/styles/depressedexternal.css
+++ b/styles/depressedexternal.css
@@ -1,13 +1,13 @@
 #circle {
-   position: absolute;
-   top: 30%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   height: 40rem;
-   width: 80rem;
-   border-radius: 0 0 40rem 40rem;
-   background-color: #d5d8ff;
-     }
+	position: absolute;
+ top: 30%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+ height: 90vh;
+ width: 100vw;
+ border-radius: 0 0 90vh 90vh;
+	background-color: #d5d8ff;
+   }
   
      h1, h2{
       display: grid;
@@ -18,13 +18,13 @@
      }
   
      h1{
-         padding-top:0.8rem;
-         font-size: 4em;
+         padding-top:8vh;
+         font-size: 4vw;
      }
   
      h2{
-      padding-top: 1em;
-      font-size: 2.5em;
+      padding-top: 2vh;
+      font-size: 2.5vw;
       text-align: center;
      }
   
@@ -38,6 +38,12 @@
       font-family: 'Open Sans', sans-serif;
      }
   
+   a{
+      font-size: 2vw;
+      position: fixed;
+      top: 90%;
+      left: 40%;
+   }
      a:link, a:visited {
       color: black;
       text-decoration: none;
@@ -74,3 +80,21 @@
      grid-row: 2;
      grid-column: 3;
   }
+
+  @media screen and (max-width: 500px) {
+	#circle {
+    position: absolute;
+    top: 70%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+    height: 150vh;
+    width: 100vw;
+    border-radius: 0 100vw 100vw  0;
+    background-color: #d5d8ff;
+	}
+   span{
+      display:flex;
+      flex-direction: column;
+      row-gap: 4vh;
+   }
+}
