--- a/styles/surveyafterdepressed.css
+++ b/styles/surveyafterdepressed.css
@@ -1,11 +1,11 @@
 #circle {
 	position: absolute;
-	top: 30%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	height: 40rem;
-	width: 80rem;
-	border-radius: 0 0 40rem 40rem;
+ top: 30%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+ height: 90vh;
+ width: 100vw;
+ border-radius: 0 0 90vh 90vh;
 	background-color: #d5d8ff;
    }
 
@@ -15,7 +15,7 @@ h1 {
     align-content: center;
  position: relative;
  padding-top: 1rem;
- font-size: 3em;
+ font-size: 5vw;
  font-family: 'Open Sans', sans-serif;
 }
 
@@ -29,7 +29,7 @@ a:link, a:visited {
 }
 
 h3 {
-	font-size: 2rem;
+	font-size: 2vw;
 	position: relative;
 	font-family: 'Open Sans', sans-serif;
 }
@@ -53,4 +53,46 @@ h3:nth-of-type(4) {
 h3:last-of-type {
 	bottom: 210px;
 	left: 75%;
+}
+
+
+@media screen and (max-width: 500px) {
+	#circle {
+    position: absolute;
+    top: 70%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+    height: 150vh;
+    width: 100vw;
+    border-radius: 0 100vw 100vw  0;
+    background-color: #d5d8ff;
+	}
+   h1{
+	   position: absolute;
+	   right: 60%;
+	   top: 50%;
+   }
+  h3{
+	  display: relative;
+  }
+   h3:first-of-type {
+	top: 60px;
+	left: 10%;
+}
+h3:nth-of-type(2) {
+	top: 150px;
+	left: 40%;
+}
+h3:nth-of-type(3) {
+	top: 280px;
+	left: 50%;
+}
+h3:nth-of-type(4) {
+	top: 500px;
+	left: 50%;
+}
+h3:last-of-type {
+	top: 700px;
+	left: 20%;
+}
 }
