--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,7 +25,9 @@ button{
     font-size: 3em;
     font-family: 'Open Sans', sans-serif;
   }
-  
+
+
+
   a:link, a:visited {
     color: black;
     text-decoration: none;
@@ -42,7 +44,7 @@ button{
    background-color: #cfd6ea;   
   }
   button.c {
-   background-color:#22223b;
+   background-color:#C795BE;
       
   }
   button.d {
@@ -57,11 +59,16 @@ button{
     background-color:#ffbcc1;   
    }
    button.g {
-    background-color:#51355a;
+    background-color:#BAB8B6;
        
    }
    button.h {
     background-color:#dffcff;
+   }
+
+   button.i {
+    background-color:#F5972C;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    }
 
    @media screen and (max-width: 500px) {
