--- a/styles/keepupgreatwork.css
+++ b/styles/keepupgreatwork.css
@@ -6,7 +6,7 @@
  height: 90vh;
  width: 100vw;
  border-radius: 0 0 90vh 90vh;
-	background-color: #d5d8ff;
+	background-color: #F7DB39;
    }
 
    h1 {
@@ -40,14 +40,15 @@
    }
    @media screen and (max-width: 500px) {
       #circle {
-       position: absolute;
-       top: 70%;
-       left: 20%;
-       transform: translate(-50%, -50%);
-       height: 150vh;
-       width: 100vw;
-       border-radius: 0 100vw 100vw  0;
-       background-color: #d5d8ff;
+         position: absolute;
+         top: 50%;
+         left: 20%;
+         transform: translate(-50%, -50%);
+         height: 100vh;
+         width: 80vw;
+         border-radius: 0 80vw 80vw 0;
+         z-index:-1;
+       background-color: #F7DB39;
       }
       h1{
          position: absolute;
