--- a/styles/stressedexternal.css
+++ b/styles/stressedexternal.css
@@ -83,13 +83,14 @@
 
   @media screen and (max-width: 500px) {
 	#circle {
-    position: absolute;
-    top: 70%;
-    left: 20%;
-    transform: translate(-50%, -50%);
-    height: 150vh;
-    width: 100vw;
-    border-radius: 0 100vw 100vw  0;
+      position: absolute;
+      top: 50%;
+      left: 20%;
+      transform: translate(-50%, -50%);
+      height: 100vh;
+      width: 80vw;
+      border-radius: 0 80vw 80vw 0;
+      z-index:-1;
     background-color: #d5d8ff;
 	}
    span{
